# astal-statusbar

./: README.md  app.in.vala  cpu_usage.vala  meson.build  resources.xml  style.scss
widget/: Bar.vala
